[tool.poetry]
authors = ["m09 <142691+m09@users.noreply.github.com>"]
description = ""
license = "Apache-2.0"
name = "memz"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
flake8-bugbear = "^22.12.6"
flake8-docstrings = "^1.6.0"
isort = "^5.11.4"
mypy = "^0.991"
pylint = "^2.15.9"
pytest = "^7.2.0"

[tool.isort]
profile = "black"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
